# Q1-VR-Player

./: .gitmodules  CMakeLists.txt  README.md
Common/: common_defines.inl
Common/include/: common_file_serializer.h  common_misc.h
Common/src/: common_file_serializer.cpp  common_misc.cpp
Launcher/: main.cpp
Launcher/include/: Launcher_dummy_gl_context.h  Launcher_misc.h  Launcher_state.h  Launcher_ui.h  Launcher_vr_support.h
Launcher/src/: Launcher.cpp  Launcher_dummy_gl_context.cpp  Launcher_misc.cpp  Launcher_state.cpp  Launcher_ui.cpp  Launcher_vr_support.cpp
VRPlayer/include/: VRPlayer.h  VRPlayer_frame.h  VRPlayer_frame_interceptor.h  VRPlayer_frame_player.h  VRPlayer_playback_openxr.h  VRPlayer_playback_ovr.h  VRPlayer_preview_window.h  VRPlayer_preview_window_ui.h  VRPlayer_settings.h  VRPlayer_slab_allocator.h  VRPlayer_types.h  VRPlayer_vr_renderer.h
VRPlayer/src/: VRPlayer.cpp  VRPlayer_frame.cpp  VRPlayer_frame_interceptor.cpp  VRPlayer_frame_player.cpp  VRPlayer_playback_openxr.cpp  VRPlayer_playback_ovr.cpp  VRPlayer_preview_window.cpp  VRPlayer_preview_window_ui.cpp  VRPlayer_settings.cpp  VRPlayer_slab_allocator.cpp  VRPlayer_types.cpp  VRPlayer_vr_renderer.cpp  ai_callbacks.cpp
